fixed tweet stream so that it correctly scroll the page

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
+    "execution-time": "^1.4.1",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
