changed npmignore file

--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,5 @@
       }
     }]
   ],
-  "plugins": [ "transform-class-properties", "transform-object-rest-spread" ]
+  "plugins": [ "transform-class-properties", "transform-object-rest-spread", ["transform-runtime", {"regenerator": true}]]
 }
