--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fetch-cookie": "^0.7.2",
     "isomorphic-fetch": "^2.2.1",
     "meow": "^5.0.0",
+    "moment": "^2.24.0",
     "pump": "^3.0.0",
     "query-string": "^6.1.0",
     "readable-stream": "^3.0.2",
@@ -53,6 +54,7 @@
     "babel-jest": "^23.4.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.4.0",
     "eslint-config-standard": "^12.0.0",
@@ -62,6 +64,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "execution-time": "^1.4.1",
     "jest": "^23.5.0",
+    "moment-range": "^4.0.2",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "standard-version": "^4.4.0",
